<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mariyan.startform.LoginActivity">

    <TextView android:id="@+id/login_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_marginTop="@dimen/login_field_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"

        />

    <TextView android:id="@+id/nickname_field_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname_text"
        android:layout_marginTop="@dimen/nickname_fields_marginTop"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/login_field"
        android:layout_marginLeft="@dimen/nickname_fields_margin"
        android:layout_marginRight="@dimen/nickname_fields_margin"
        />

    <EditText android:id="@+id/nickname_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/nickname_field_id"
        android:layout_below="@id/login_field"
        android:layout_marginRight="@dimen/nickname_fields_margin"
        android:layout_marginTop="@dimen/nickname_fields_marginTop"/>

    <Button android:id="@+id/start_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/nickname_text_id"
        android:layout_marginTop="@dimen/login_form_button_position"
        android:text="@string/Start_menu_button"/>

    <Button android:id="@+id/back_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nickname_text_id"
        android:layout_marginTop="@dimen/login_form_button_position"
        android:text="@string/back_text"
        android:layout_toRightOf="@id/start_button_id"/>

    <Button android:id="@+id/save_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nickname_text_id"
        android:layout_marginTop="@dimen/login_form_button_position"
        android:text="@string/save_text"
        android:layout_toRightOf="@id/back_button_id"/>

</RelativeLayout>
