<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/puzzle"/>

    <Button android:id="@+id/login_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="@dimen/login_field_margin"
        android:layout_marginRight="@dimen/login_field_margin"
        android:layout_marginLeft="@dimen/login_field_margin"/>

    <Button android:id="@+id/sound_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Settings_menu_button"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:layout_marginRight="@dimen/login_field_margin"
        android:layout_marginLeft="@dimen/login_field_margin"/>

    <Button android:id="@+id/rank_list_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rank_list_text"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:layout_marginRight="@dimen/login_field_margin"
        android:layout_marginLeft="@dimen/login_field_margin"/>

    <Button android:id="@+id/exit_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit_menu_button"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:layout_marginRight="@dimen/login_field_margin"
        android:layout_marginLeft="@dimen/login_field_margin"/>

</LinearLayout>
